[gd_scene load_steps=3 format=3 uid="uid://cut3t1n8mqh4l"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_27hgv"]
[ext_resource type="Texture2D" uid="uid://c7sntl4ursip5" path="res://assets/Gray.png" id="3_61ntu"]

[node name="Game" type="Node2D"]
script = ExtResource("1_27hgv")

[node name="Background" type="TextureRect" parent="."]
offset_left = -72.0
offset_top = -68.0
offset_right = 1255.0
offset_bottom = 750.0
size_flags_horizontal = 4
texture = ExtResource("3_61ntu")
stretch_mode = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HitButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 1114.0
offset_top = 283.0
offset_right = 1145.0
offset_bottom = 314.0
text = "Hit"

[node name="StandButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 1091.0
offset_top = 242.0
offset_right = 1144.0
offset_bottom = 273.0
text = "Stand"

[node name="PlayerScore" type="Label" parent="UI"]
layout_mode = 0
offset_left = 456.0
offset_top = 164.0
offset_right = 496.0
offset_bottom = 187.0
text = "Player:"

[node name="DealerScore" type="Label" parent="UI"]
layout_mode = 0
offset_left = 331.0
offset_top = 161.0
offset_right = 371.0
offset_bottom = 184.0
text = "Dealer: "

[node name="MessageLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 150.0
offset_top = 158.0
offset_right = 190.0
offset_bottom = 181.0
text = "Message"

[node name="PlayerHand" type="HBoxContainer" parent="."]
offset_left = 208.0
offset_top = 411.0
offset_right = 248.0
offset_bottom = 451.0

[node name="DealerHand" type="HBoxContainer" parent="."]
offset_left = 448.0
offset_top = 6.0
offset_right = 488.0
offset_bottom = 46.0

[node name="GameTimer" type="Timer" parent="."]

[connection signal="pressed" from="UI/HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="UI/StandButton" to="." method="_on_stand_button_pressed"]
